infrastructure/k8s/rancher-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1" 
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600" 
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600" 
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: rancher-dashboard
  namespace: cattle-system
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.pyxieportal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 443
  tls:
  - hosts:
    - rancher.pyxieportal.com
    secretName: letsencrypt-prod
